deployments/plex/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plexserver
  name: plexserver
  namespace: plexserver
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: plexserver
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: plexserver
    spec:
      volumes:
        - name: plex-data
          persistentVolumeClaim:
            claimName: plexserver-pvc-data
        - name: plex-films
          persistentVolumeClaim:
            claimName: plexserver-pvc-film
        - name: plex-tv
          persistentVolumeClaim:
            claimName: plexserver-pvc-tv
        - name: plex-audiobooks
          persistentVolumeClaim:
            claimName: plexserver-pvc-audiobooks
        - name: plex-music
          persistentVolumeClaim:
            claimName: plexserver-pvc-music
        - name: plex-photos
          persistentVolumeClaim:
            claimName: plexserver-pvc-photos
      containers:
        - env:
            - name: PLEX_CLAIM
              value: claim-WcoLdWLixAboG2--eMPE
            - name: PGID
              value: "\x31\x30\x30" # < ASCII code for '100'
            - name: PUID
              value: "\x31\x30\x33\x35" # < ACII code for '1035'
            - name: VERSION
              value: latest
            - name: TZ
              value: Europe/Amsterdam
          volumeMounts:
            - mountPath: /config
              name: plex-data
            - mountPath: /media/film
              name: plex-films
            - mountPath: /media/tv
              name: plex-tv
            - mountPath: /media/audiobooks
              name: plex-audiobooks
            - mountPath: /media/music
              name: plex-music
            - mountPath: /media/photos
              name: plex-photos
          image: docker.io/plexinc/pms-docker:latest
          imagePullPolicy: Always
          name: plexserver
          ports:
            - containerPort: 32400
              name: pms-web
              protocol: TCP
            - containerPort: 32469
              name: dlna-tcp
              protocol: TCP
            - containerPort: 1900
              name: dlna-udp
              protocol: UDP
            - containerPort: 3005
              name: plex-companion
              protocol: TCP
            - containerPort: 5353
              name: discovery-udp
              protocol: UDP
            - containerPort: 8324
              name: plex-roku
              protocol: TCP
            - containerPort: 32410
              name: gdm-32410
              protocol: UDP
            - containerPort: 32412
              name: gdm-32412
              protocol: UDP
            - containerPort: 32413
              name: gdm-32413
              protocol: UDP
            - containerPort: 32414
              name: gdm-32414
              protocol: UDP
          resources: {}
          stdin: true
          tty: true
      restartPolicy: Always
