deployments/plex/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plexserver
  namespace: plexserver
spec:
  selector:
    app: plexserver
  ports:
    - name: pms-web
      protocol: TCP
      port: 32400
      targetPort: 32400
