deployments/plex/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plexserver
  namespace: plexserver
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
spec:
  tls:
    - hosts:
        - plex.imaginator.com
      secretName: plex.imaginator.com-tls
  rules:
    - host: plex.imaginator.com
      http:
        paths:
          - backend:
              service:
                name: plexserver
                port:
                  name: pms-web
            pathType: Prefix
            path: "/"
